--- a/src/styles/navigation.css
+++ b/src/styles/navigation.css
@@ -63,7 +63,8 @@
   display: block;
 }
 
-.nav-link:hover {
+.nav-link:hover,
+.nav-link--button:hover {
   color: #ecf0f1;
   background-color: rgba(255, 255, 255, 0.1);
 }
@@ -73,7 +74,8 @@
   background-color: rgba(52, 152, 219, 0.1);
 }
 
-.nav-item--active .nav-link:hover {
+.nav-item--active .nav-link:hover,
+.nav-item--active .nav-link--button:hover {
   color: #5dade2;
 }
 
